# FengSui

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md
docs/: 01_project_brief.md  02_prd.md  03_mvp_scope.md  04_architecture.md  05_data_model.md  06_protocol.md  07_database_schema.md  08_ui_spec.md  09_task_breakdown.md  10_coding_rules.md  11_test_plan.md  12_agent_instructions.md  13_release_plan.md  14_network_model.md
prototype/: README.md  generate_hi_fi_assets.js  index.html  prototype_notes.md
prototype/screens/: manifest.json
src/: main.cpp
src/app/: AppSettings.cpp  AppSettings.h  Application.cpp  Application.h  Logger.cpp  Logger.h  Version.h.in
src/core/: BeaconService.cpp  BeaconService.h  CourierService.cpp  CourierService.h  ShareService.cpp  ShareService.h  SignalService.cpp  SignalService.h  TcpProbe.cpp  TcpProbe.h
src/models/: AccessGrant.h  Conversation.h  DownloadLog.h  Message.h  ModelEnums.h  Models.cpp  NetworkPolicy.h  PeerInfo.h  SharedFolder.h  TransferTask.h
src/network/: Protocol.cpp  Protocol.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  UdpDiscovery.cpp  UdpDiscovery.h
src/platform/: InterfaceEnumerator.cpp  InterfaceEnumerator.h  PlatformUtils.cpp  PlatformUtils.h  SystemTrayController.cpp  SystemTrayController.h
src/storage/: AccessGrantRepository.cpp  AccessGrantRepository.h  ConversationRepository.cpp  ConversationRepository.h  Database.cpp  Database.h  DownloadLogRepository.cpp  DownloadLogRepository.h  ManualPeerRepository.cpp  ManualPeerRepository.h  MessageRepository.cpp  MessageRepository.h  SettingsRepository.cpp  SettingsRepository.h  ShareRepository.cpp  ShareRepository.h  TransferRepository.cpp  TransferRepository.h
src/tests/: tst_add_peer_dialog.cpp  tst_beacon_policy.cpp  tst_chat_page.cpp  tst_courier_service.cpp  tst_diagnostics_page.cpp  tst_main_window_navigation.cpp  tst_network_policy.cpp  tst_protocol.cpp  tst_qml_reflection.cpp  tst_settings_page.cpp  tst_share_access_dialog.cpp  tst_share_page.cpp  tst_share_service.cpp  tst_signal_service.cpp  tst_storage.cpp  tst_transfer_center_page.cpp  tst_viewmodels.cpp
src/ui/: MainWindow.cpp  MainWindow.h  UiStyle.cpp  UiStyle.h
src/ui/assets/: BrandMark.qml
src/ui/chat/: ChatPage.cpp  ChatPage.h
src/ui/components/: AppComboBox.qml  AppIcon.qml  AppSwitch.qml  AppTextField.qml  ChatBubble.qml  DeviceCard.qml  EmptyState.qml  NavItem.qml  OsBadge.qml  PageHeader.qml  PrimaryButton.qml  SectionCard.qml  SettingRow.qml  StatusPill.qml  ThinProgressBar.qml
src/ui/contacts/: AddPeerDialog.cpp  AddPeerDialog.h  ContactsPage.cpp  ContactsPage.h
src/ui/diagnostics/: DiagnosticsPage.cpp  DiagnosticsPage.h
src/ui/dialogs/: AddPeerDialog.qml  IncomingTransferDialog.qml  ShareAccessDialog.qml
src/ui/dropbox/: DropboxPage.cpp  DropboxPage.h
src/ui/onboarding/: OnboardingWizard.cpp  OnboardingWizard.h
src/ui/pages/: ChatPage.qml  ContactsPage.qml  OnboardingWizard.qml  SettingsPage.qml  SharePage.qml  TransferCenterPage.qml
src/ui/qml/: Format.js  Format.mjs  Main.qml  Theme.qml
src/ui/settings/: SettingsPage.cpp  SettingsPage.h
src/ui/share/: ShareAccessDialog.cpp  ShareAccessDialog.h  SharePage.cpp  SharePage.h
src/ui/transfer_center/: TransferCenterPage.cpp  TransferCenterPage.h
src/ui/tray/: TrayManager.cpp  TrayManager.h
src/ui/viewmodels/: AppController.cpp  AppController.h  ChatViewModel.cpp  ChatViewModel.h  ContactsViewModel.cpp  ContactsViewModel.h  ConversationListModel.cpp  ConversationListModel.h  MessageListModel.cpp  MessageListModel.h  OnboardingViewModel.cpp  OnboardingViewModel.h  PeerListModel.cpp  PeerListModel.h  QmlEnums.h  SettingsViewModel.cpp  SettingsViewModel.h  ShareViewModel.cpp  ShareViewModel.h  ThemeController.cpp  ThemeController.h  TransferListModel.cpp  TransferListModel.h  TransferViewModel.cpp  TransferViewModel.h
